--- a/style.css
+++ b/style.css
@@ -1,3 +1,47 @@
+* {
+    box-sizing: border-box;
+}
+html {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 body {
     background-color: azure;
+    margin: 0;
+    height: 100vh;
+    position: relative;
+}
+.background {
+    background-image: url("./images/calendar.webp");
+    filter: blur(6px);
+    -webkit-filter: blur(6px);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    z-index: -1;
+    position: absolute;
+}
+
+.container {
+    max-width: 1024px;
+    width: 100%;
+    margin: 0 auto;
+}
+.flex {
+    display: flex;
+}
+.justify-between {
+    justify-content: space-between;
+}
+.items-center {
+    align-items: center;
+}
+.right {
+    float: right;
+}
+a {
+    color:orange;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
