--- a/css/auth.css
+++ b/css/auth.css
@@ -3,10 +3,10 @@
     row-gap: 2em;
 }
 .login-form {
-    box-shadow:  1px 1px 1px 2px rgb(174, 169, 174);
+    box-shadow: var(--shadow);
     background-color: rgb(255, 255, 255);
-    height: 300px;
-    width: 500px;
+    min-height: 300px;
+    width: 48%;
     border-radius: 15px;
     padding: 2rem;
 }
@@ -17,7 +17,7 @@ input {
     margin-bottom: 0.5rem;
     border-radius: 5px;
     border: none;
-    border-bottom: solid 1px rgb(32, 34, 34);
+    border-bottom: solid 1px var(--primary);
     border-top: solid 1px rgb(32, 34, 34);
     outline: none;
     font-size: 1.1rem;
