--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+:root {
+    --primary: orange;
+    --secondary: #1e90ff;
+    --white: #ffffff;
+    --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 * {
     box-sizing: border-box;
 }
@@ -11,7 +18,7 @@ body {
     position: relative;
 }
 .background {
-    background-image: url("./images/calendar.webp");
+    background-image: url("../images/calendar.webp");
     filter: blur(6px);
     -webkit-filter: blur(6px);
     background-position: center;
@@ -31,6 +38,9 @@ body {
 .flex {
     display: flex;
 }
+.flex-col {
+    flex-direction: column;
+}
 .justify-between {
     justify-content: space-between;
 }
@@ -41,7 +51,17 @@ body {
     float: right;
 }
 a {
-    color:orange;
+    color: var(--primary);
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+}
+.h-full {
+    height: 100%;
+}
+.w-full {
+    width: 100%;
+}
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
 }
