feature: added cloudinary image upload

--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,9 @@ a {
 .capitalize {
     text-transform: capitalize;
 }
+#profileimage {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+}
